--- a/SomeCountriesApp/UI/Base.lproj/LaunchScreen.storyboard
+++ b/SomeCountriesApp/UI/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,17 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="yrt-PZ-Phq">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                                <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yrt-PZ-Phq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8lL-ZA-rfC"/>
+                            <constraint firstItem="yrt-PZ-Phq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="yNd-Vw-sEf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
